# webget

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  get_distro.pl  webget.conf.in  webget.spec.in
htdocs/: Makefile.am  webget.html  webget.js  webget.py
