## Makefile.am
##
## (C) Copyright 2017 Fred Gleason <fredg@paravelsystems.com>
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
## Use automake to process this into a Makefile.in

#if DOCBOOK_AM
#  DOCBOOK_OPT = docs
#endif

SUBDIRS = htdocs

install-exec-local:	
	mkdir -p $(DESTDIR)@sysconfdir@
	cp webget.conf $(DESTDIR)@sysconfdir@/

uninstall-local:	
	rm -f $(DESTDIR)@sysconfdir@/webget.conf

rpm:	dist
	mkdir -p $(HOME)/rpmbuild/SOURCES
	cp webget-$(VERSION).tar.gz $(HOME)/rpmbuild/SOURCES/
	$(RPMBUILD) -ba --target noarch-$(VENDOR)-linux webget.spec
	mv $(HOME)/rpmbuild/RPMS/noarch/webget-*.rpm $(top_srcdir)/
	mv $(HOME)/rpmbuild/SRPMS/webget-*.src.rpm $(top_srcdir)/
	rm $(HOME)/rpmbuild/SOURCES/webget-$(VERSION).tar.gz

EXTRA_DIST = get_distro.pl\
             get_target.sh\
             PACKAGE_VERSION

CLEANFILES = *~\
             *.rpm\
             *.tar.gz
DISTCLEANFILES = *.spec\
                 webget.conf
MAINTAINERCLEANFILES = *~\
                       aclocal.m4\
                       configure\
                       install-sh\
                       Makefile.in\
                       missing
